# subset-sum

./: .gitignore  .npmignore  Cargo.toml  LICENSE_MIT  README.md  index.d.ts  index.js  makefile  package-lock.json  package.json  perf.js  renovate.json5  test.js
.github/workflows/: CI-WASM.yml  CI.yml  codespeed.yml  node.ci.yml
crates/hash-collection/: Cargo.toml
crates/hash-collection/src/: lib.rs
crates/node/: Cargo.toml  package.json
crates/node/npm/android-arm-eabi/: package.json
crates/node/npm/android-arm64/: README.md
crates/node/npm/darwin-arm64/: README.md  package.json
crates/node/npm/freebsd-x64/: README.md
crates/node/npm/linux-arm-gnueabihf/: README.md
crates/node/npm/linux-arm64-musl/: README.md  package.json
crates/node/npm/linux-x64-gnu/: README.md
crates/node/npm/linux-x64-musl/: README.md
crates/node/npm/win32-arm64-msvc/: package.json
crates/node/npm/win32-ia32-msvc/: package.json
crates/node/src/: lib.rs
crates/subset-sum/: Cargo.toml
crates/subset-sum/benches/: get_all_subset_sum.rs  get_subset_sum.rs
crates/subset-sum/src/: error.rs  get_all_subset_sums.rs  get_subset_sum.rs  lib.rs
crates/wasm/: .npmignore  Cargo.toml  makefile  package.json
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
publish/: index.d.ts  index.js  package.json
scripts/npm/android-arm-eabi/: README.md  package.json
scripts/npm/android-arm64/: package.json
scripts/npm/darwin-arm64/: package.json
scripts/npm/darwin-x64/: README.md  package.json
scripts/npm/freebsd-x64/: package.json
scripts/npm/linux-arm-gnueabihf/: package.json
scripts/npm/linux-arm64-gnu/: README.md  package.json
scripts/npm/linux-arm64-musl/: package.json
scripts/npm/linux-x64-gnu/: package.json
scripts/npm/linux-x64-musl/: package.json
scripts/npm/win32-arm64-msvc/: README.md  package.json
scripts/npm/win32-ia32-msvc/: README.md  package.json
scripts/npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  subset_sum.rs
tests/: web.rs
