[package]
edition = "2021"
name = "node_subset_sum"
version = "1.0.0"
authors = ["Léo Coletta <mail.leo.coletta@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
subset_sum = { path = "../subset-sum", features = ["napi-types"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.2", default-features = false, features = ["napi4"] }
napi-derive = "2.3.1"

[build-dependencies]
napi-build = "1.2.1"
