[package]
name = "subset_sum"
version = "1.0.0"
authors = ["Léo Coletta <mail.leo.coletta@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
strum_macros = "0.26.4"
num-traits = "0.2.19"
fn-memo = { version = "1.2", default-features = false }
wasm-bindgen = { version = "^0.2.95", optional = true }
instant = { version = "^0.1.13", features = [
  "wasm-bindgen",
  "inaccurate",
], optional = true }
napi = { version = "^2.16.13", optional = true }

[features]
wasm-js = ["wasm-bindgen", "instant"]
napi-types = ["napi"]

[dev-dependencies]
codspeed-criterion-compat = "2.7.2"
criterion = "0.5.1"

[[bench]]
name = "get_all_subset_sum"
harness = false

[[bench]]
name = "get_subset_sum"
harness = false
